opam-version: "2.0"
version: "0.6.0"
maintainer: "Zoggy <zoggy@bat8.org>"
authors: ["Zoggy <zoggy@bat8.org>"]
homepage: "http://zoggy.github.io/ocf/"
license: "LGPL-3.0-only"
doc: ["http://zoggy.github.io/ocf/doc.html"]
dev-repo: "git+https://github.com/zoggy/ocf.git"
bug-reports: "https://github.com/zoggy/ocf/issues"
tags: ["configuration" "options" "json"]

build: [
  ["./configure" "--prefix" prefix]
  [make "all"]
]
install: [
  [make "install"]
]
remove: [["ocamlfind" "remove" "ocf"]]
depends: [
  "ocaml" {>= "4.12.0"}
  "ocamlfind"
  "yojson" {>= "1.7.0"}
  "ppx_tools" {>= "6.3"}
]
